app/Resources/assets/scss/student_view.scss
.background_student {
  background-color: black ;
  font-family: "Apex New Book";
  color: white;
}

.blue_uca {
  color: #46aed8;
}

.progress {
  background-color: #202020;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.dark-light{
  background-color: #202020;
}

.student-icon{
  vertical-align: middle;
  width: 20px;
  height: 20px;
}

.li-valid{
  margin-right: 0px;
  list-style-type: none;
}





.icon-40 {
  width: 40px;
  height: 40px;
  margin-right: 1rem;
}

.icon-20 {
  width: 20px;
  height: 20px;
  margin-right: 0.5rem;
}

.student-title {
  width: 100%;

  h1 {
    color: var(--primary);
    margin-bottom: 1.5rem;
  }

  img {
    width: 100%;
    margin-bottom: 1.5rem;
  }
}

.student-subtitle {
  display: flex;
}

.title-underlined {
  position: relative;
  display: block;
}

.title-underlined:after {
  content: '';
  position: absolute;
  width: 70px;
  height: 1px;
  background-color: var(--primary);
  top: 100%;
  left: 0;
}

.student-progress {
  height: 5px;
}

.presentation-summary {
  width: 100%;

  .media {
    @media (min-width: 768px) {
      & {
        float: left;
        max-width: 50%;

      }
    }

    & > img, & > div.embed-responsive {
      max-height: calc(100% - 1rem);

      @media (min-width: 768px) {
        & {
          max-width: calc(100% - 1rem);
        }
      }
    }

  }
}

.student-grid {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  flex-direction: column;

  @media (min-width: 992px) {
    & {
      flex-direction: row;
    }
  }

  .grid-element {
    max-width: 100%;
    flex: 0 0 100%;

    &:not(:first-child) {
      margin-top: 2rem;
    }

    @media (min-width: 992px) {
      & {
        max-width: 33.3333%;
        flex: 0 0 33.33333%;
        margin-left: 4rem;
      }

      &:not(:first-child) {
        margin-top: 0rem;
      }

      &:not(:last-child) {
        border-right: 1px solid;
      }
    }

    .student-subtitle {
      justify-content: center;

      @media (min-width: 992px) {
        & {
          justify-content: flex-start;
        }
      }
    }

    ul {
      list-style: none;
      padding-left: 0;
      margin-top: 1rem;

      li {
        display: flex;
        justify-content: center;

        @media (min-width: 992px) {
          & {
            justify-content: flex-start;
          }
        }

        i {
          color: var(--primary);
          margin-right: 0.8rem;
          margin-top: 0.3rem;
        }
      }
    }
  }
}


.presentation-info {
  background-color: $dark-light;
  text-align: center;

  @media (min-width: 768px) {
    & {
      text-align: left;
    }
  }

  .student-subtitle {
    justify-content: center;

    @media (min-width: 768px) {
      & {
        justify-content: flex-start;
      }
    }
  }

  .col {
    padding-bottom: 1.5rem;
  }

  ul {
    list-style: none;
    color: var(--primary);
    padding-left: 0.5rem;

    li {
      i {
        margin-right: 0.5rem;
      }
    }
  }
}

